# gridsentinel-predictive-maintenance

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  STATUS.md  ametek_AI_Integration_Internship.txt  ametek_ML_Engineer_job_posting.txt  docker-compose.yml  index.html  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  model-eval.yml  pages.yml
.streamlit/: config.toml
docs/: architecture.md  backblaze_results.md  data_quality_metropt3.md  edge_benchmark.md  load_test_results.md  lstm_results.md  ml_test_score.md  model_card.md  phase1_baseline_results.md  phase2_anomaly_results.md  runbook.md  sequence_model_results.md
docs/adr/: 0000-template.md  0001-dataset-feed-and-cloud.md  0002-anomaly-detection-primary.md  0003-serving-and-registry-stack.md  0004-drift-detection-approach.md
infra/: README.md
infra/aws/: README.md  task-definition.json
monitoring/: README.md  __init__.py  backfill.py  drift.py  drift_trigger.py  eia_drift.py  self_heal.py
monitoring/prometheus/: prometheus.yml
pipelines/: README.md  __init__.py  anomaly.py  backblaze.py  backblaze_schema.py  connectors.py  data_quality.py  features.py  labels.py  lstm_model.py  metric_gate.py  metropt3_schema.py  sequence_model.py  train_baseline.py
reports/: __init__.py  app.py  dashboard.py  precompute.py
reports/assets/: afr.csv  anomaly_timeline.csv  summary.json
serving/: README.md  __init__.py  app.py  benchmark.py  build_artifact.py  load_test.py  metrics.py  model.py  registry.py  status.py
site/: index.html
src/gridsentinel/: __init__.py  cost.py  cv.py
tests/: test_anomaly.py  test_backblaze.py  test_backfill.py  test_benchmark.py  test_connectors.py  test_cost.py  test_cv.py  test_dashboard_assets.py  test_dashboard_build.py  test_data_quality.py  test_drift.py  test_drift_trigger.py  test_features.py  test_infra_config.py  test_integration.py  test_labels.py  test_load.py  test_lstm_model.py  test_metric_gate.py  test_metropt3_schema.py  test_model_behavior.py  test_monitoring_config.py  test_registry.py  test_self_heal.py  test_sequence_model.py  test_serving.py  test_smoke.py  test_status.py
(+3 files in other folders)
