[project]
name = "gridsentinel"
version = "0.0.1"
description = "Predictive maintenance & anomaly detection for IoT-connected power systems"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5", "mypy>=1.8", "httpx>=0.27"]
pipelines = ["pandas>=2", "pandera>=0.20"]
modeling = ["pandas>=2", "numpy>=1.26", "scikit-learn>=1.4", "xgboost>=2", "mlflow>=2.12"]
serving = ["fastapi>=0.110", "uvicorn>=0.29", "joblib>=1.3", "scikit-learn>=1.4", "pandas>=2", "prometheus-client>=0.20"]
dl = ["tensorflow-cpu>=2.15", "scikit-learn>=1.4", "pandas>=2"]
dashboard = ["streamlit>=1.30", "plotly>=5.18", "matplotlib>=3.7", "pandas>=2"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src", "pipelines", "serving", "monitoring", "reports"]
omit = ["*/__main__.py"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
# Flat layout: gridsentinel lives under src/; pipelines/serving/... are top-level.
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true
